--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="bg-white text-gray-900">
 
     <!-- Navigation -->
-    <nav class="fixed w-full z-50 transition-all duration-500 bg-white/95 backdrop-blur-xl shadow-lg" id="navbar">
+    <nav class="fixed w-full z-50 bg-white/95 backdrop-blur-xl shadow-lg transition-all duration-500" id="navbar">
         <div class="max-w-7xl mx-auto px-6 py-6">
             <div class="flex items-center justify-between">
                 <a href="index.html" class="flex items-center space-x-3 group">
@@ -25,15 +25,17 @@
                     <!-- About Dropdown -->
                     <div class="relative group">
                         <button class="text-gray-600 hover:text-[#0079c2] transition-colors font-medium flex items-center space-x-1">
-                            <span>About</span>
+                            <span><a href="about.html#hero">About</a></span>
                             <i class="fas fa-chevron-down text-xs"></i>
                         </button>
                         <div class="absolute top-full left-0 mt-2 w-48 bg-white rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all duration-300 border border-gray-100">
-                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-[#0079c2] hover:bg-blue-50 transition-colors first:rounded-t-xl">About Us</a>
-                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-[#0079c2] hover:bg-blue-50 transition-colors">FAQ</a>
-                            <a href="#" class="block px-6 py-3 text-gray-600 hover:text-[#0079c2] hover:bg-blue-50 transition-colors last:rounded-b-xl">PIONAIRS</a>
+                            <a href="about.html#about" class="block px-6 py-3 text-gray-600 hover:text-[#0079c2] hover:bg-blue-50 transition-colors first:rounded-t-xl">About Us</a>
+                            <a href="about.html#faq" class="block px-6 py-3 text-gray-600 hover:text-[#0079c2] hover:bg-blue-50 transition-colors">FAQ</a>
+                            <a href="pionairs.html" class="block px-6 py-3 text-gray-600 hover:text-[#0079c2] hover:bg-blue-50 transition-colors last:rounded-b-xl">PIONAIRS</a>
                         </div>
                     </div>
+
+                    <a href="#" class="text-gray-600 hover:text-[#0079c2] transition-colors font-medium">Events</a>
 
                     <!-- Members Dropdown -->
                     <div class="relative group">
@@ -74,27 +76,30 @@
         </div>
 
         <!-- Mobile Menu -->
-        <div class="md:hidden fixed inset-0 bg-gray-900/95 backdrop-blur-lg transform translate-x-full transition-transform duration-300 ease-in-out" id="mobile-menu">
+        <div class="md:hidden fixed inset-0 bg-gray-900/95 backdrop-blur-lg transform translate-x-full transition-transform duration-300 ease-in-out z-50" id="mobile-menu">
             <div class="flex flex-col h-full">
                 <div class="flex items-center justify-between px-6 py-6 border-b border-white/10">
-                    <img src="img/IATP-logo.png" alt="IATP Logo" class="h-12 w-auto brightness-0 invert">
+                    <a href="index.html"> <img src="img/IATP-logo.png" alt="IATP Logo" class="h-12 w-auto   "></a>
                     <button class="text-white" id="mobile-menu-close">
                         <i class="fas fa-times text-2xl"></i>
                     </button>
                 </div>
-                <nav class="flex-1 px-6 py-8 space-y-4">
+                <nav class="flex-1 px-6 py-8 space-y-4 bg-gray-900">
                     <!-- About Mobile Dropdown -->
                     <div class="mobile-dropdown">
                         <button class="flex items-center justify-between w-full text-white text-2xl font-semibold hover:text-[#0079c2] transition-colors mobile-dropdown-btn">
-                            <span>About</span>
+                            <span><a href="about.html#hero">About</a></span>
                             <i class="fas fa-chevron-down text-lg transition-transform"></i>
                         </button>
                         <div class="mobile-dropdown-content hidden pl-6 pt-3 space-y-3">
-                            <a href="#" class="block text-white text-lg hover:text-[#0079c2] transition-colors mobile-menu-link">About Us</a>
-                            <a href="#" class="block text-white text-lg hover:text-[#0079c2] transition-colors mobile-menu-link">FAQ</a>
-                            <a href="#" class="block text-white text-lg hover:text-[#0079c2] transition-colors mobile-menu-link">PIONAIRS</a>
+                            <a href="about.html#about" class="block text-white text-lg hover:text-[#0079c2] transition-colors mobile-menu-link">About Us</a>
+                            <a href="about.html#faq" class="block text-white text-lg hover:text-[#0079c2] transition-colors mobile-menu-link">FAQ</a>
+                            <a href="pionairs.html" class="block text-white text-lg hover:text-[#0079c2] transition-colors mobile-menu-link">PIONAIRS</a>
                         </div>
                     </div>
+
+                    <a href="#" class="block text-white text-2xl font-semibold hover:text-[#0079c2] transition-colors mobile-menu-link">Events</a>
+
 
                     <!-- Members Mobile Dropdown -->
                     <div class="mobile-dropdown">
@@ -123,7 +128,7 @@
 
                     <a href="#" class="block text-white text-2xl font-semibold hover:text-[#0079c2] transition-colors mobile-menu-link">Contact</a>
                 </nav>
-                <div class="px-6 py-8 border-t border-white/10">
+                <div class="px-6 py-8 border-t border-white/10 bg-gray-800">
                     <button class="w-full px-8 py-4 bg-gradient-to-r from-[#0079c2] to-[#337ab7] text-white rounded-full font-semibold shadow-lg text-lg">
                         Member Portal
                     </button>
@@ -131,6 +136,7 @@
             </div>
         </div>
     </nav>
+
 
     <!-- Hero Section with Video -->
     <section class="relative min-h-screen flex items-center overflow-hidden">
@@ -162,14 +168,28 @@
                     </div>
 
                     <h1 class="text-6xl md:text-8xl lg:text-9xl font-black text-white mb-8 leading-none tracking-tight">
-                        The Global<br/>
-                        <span class="inline-block mt-4">Aviation Network</span>
+                        IATP<br/>
+                        <span class="text-4xl md:text-6xl lg:text-6xl inline-block mt-4 leading-relaxed">International Airlines Technical Pool</span>
                     </h1>
 
                     <p class="text-xl md:text-2xl text-white/90 max-w-3xl mx-auto mb-12 leading-relaxed font-light">
-                        Connecting 130+ airlines across 890 stations worldwide.<br/>
-                        Where AOG emergencies meet instant solutions.
+                        Sharing Technical Resources to 
+                        
                     </p>
+                    <div class="columns-2 lg:px-[25%] gap-4 pb-12 text-left  text-white/90 ">
+                        <div>
+                            Generate economic savings
+                        </div>
+                        <div>
+                            Support aog situations
+                        </div>
+                        <div>
+                            On time dispatch reliability
+                        </div>
+                        <div>
+                            Operational safety
+                        </div>
+                    </div>
 
                     <div class="flex flex-col sm:flex-row items-center justify-center gap-6 mb-20">
                         <button class="magnetic-btn group px-10 py-5 bg-white text-blue-600 rounded-full text-lg font-bold shadow-2xl hover:shadow-white/50 transition-all flex items-center space-x-3">
@@ -691,16 +711,13 @@
         </div>
     </section>
 
-    <!-- Footer -->
+   <!-- Footer -->
     <footer class="py-16 bg-gray-900 text-white">
         <div class="max-w-7xl mx-auto px-6">
             <div class="grid md:grid-cols-4 gap-12 mb-12">
                 <div>
                     <div class="flex items-center space-x-3 mb-6">
-                        <div class="w-12 h-12 bg-gradient-to-br from-blue-600 to-blue-500 rounded-2xl flex items-center justify-center font-bold text-lg shadow-lg">
-                            IA
-                        </div>
-                        <span class="font-bold text-xl">IATP</span>
+                        <img src="img/IATP-logo.png" alt="IATP Logo" class="h-12 w-auto   ">
                     </div>
                     <p class="text-gray-400 leading-relaxed">
                         The world's leading aviation technical resource sharing platform since 1948.
@@ -710,33 +727,33 @@
                 <div>
                     <h4 class="font-bold text-lg mb-6">Services</h4>
                     <ul class="space-y-3 text-gray-400">
-                        <li><a href="#" class="hover:text-blue-400 transition-colors">Parts Pooling</a></li>
-                        <li><a href="#" class="hover:text-blue-400 transition-colors">Line Maintenance</a></li>
-                        <li><a href="#" class="hover:text-blue-400 transition-colors">Aircraft Recovery</a></li>
-                        <li><a href="#" class="hover:text-blue-400 transition-colors">Equipment Pooling</a></li>
+                        <li><a href="index.html#services" class="hover:text-[#0079c2] transition-colors">Parts Pooling</a></li>
+                        <li><a href="index.html#services" class="hover:text-[#0079c2] transition-colors">Line Maintenance</a></li>
+                        <li><a href="index.html#services" class="hover:text-[#0079c2] transition-colors">Aircraft Recovery</a></li>
+                        <li><a href="index.html#services" class="hover:text-[#0079c2] transition-colors">Equipment Pooling</a></li>
                     </ul>
                 </div>
 
                 <div>
                     <h4 class="font-bold text-lg mb-6">Company</h4>
                     <ul class="space-y-3 text-gray-400">
-                        <li><a href="#" class="hover:text-blue-400 transition-colors">About Us</a></li>
-                        <li><a href="#" class="hover:text-blue-400 transition-colors">Events</a></li>
-                        <li><a href="#" class="hover:text-blue-400 transition-colors">Membership</a></li>
-                        <li><a href="#" class="hover:text-blue-400 transition-colors">Contact</a></li>
+                        <li><a href="about.html" class="hover:text-[#0079c2] transition-colors">About Us</a></li>
+                        <li><a href="index.html#events" class="hover:text-[#0079c2] transition-colors">Events</a></li>
+                        <li><a href="#" class="hover:text-[#0079c2] transition-colors">Membership</a></li>
+                        <li><a href="#" class="hover:text-[#0079c2] transition-colors">Contact</a></li>
                     </ul>
                 </div>
 
                 <div>
                     <h4 class="font-bold text-lg mb-6">Connect</h4>
                     <div class="flex space-x-4">
-                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-blue-600 transition-all">
+                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-[#0079c2] transition-all">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-blue-600 transition-all">
+                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-[#0079c2] transition-all">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-blue-600 transition-all">
+                        <a href="#" class="w-12 h-12 bg-gray-800 rounded-xl flex items-center justify-center hover:bg-[#0079c2] transition-all">
                             <i class="fab fa-youtube"></i>
                         </a>
                     </div>
@@ -746,9 +763,9 @@
             <div class="border-t border-gray-800 pt-8 flex flex-col md:flex-row items-center justify-between text-gray-400">
                 <p>&copy; 2025 IATP. All rights reserved.</p>
                 <div class="flex space-x-6 mt-4 md:mt-0">
-                    <a href="#" class="hover:text-blue-400 transition-colors">Privacy</a>
-                    <a href="#" class="hover:text-blue-400 transition-colors">Terms</a>
-                    <a href="#" class="hover:text-blue-400 transition-colors">Cookies</a>
+                    <a href="#" class="hover:text-[#0079c2] transition-colors">Privacy</a>
+                    <a href="#" class="hover:text-[#0079c2] transition-colors">Terms</a>
+                    <a href="#" class="hover:text-[#0079c2] transition-colors">Cookies</a>
                 </div>
             </div>
         </div>
