--- a/about.html
+++ b/about.html
@@ -382,7 +382,7 @@
                         </div>
                         <div class="prose prose-lg max-w-none text-gray-700 leading-relaxed">
                             <!-- Vertical Timeline -->
-                            <div class="relative   ml-4 space-y-8">
+                            <div class="relative border-l-4 border-[#0079c2] ml-4 space-y-8">
                                 <!-- 2024 -->
                                 <div class="relative pl-8 pb-8">
                                     <div class="absolute -left-3 top-0 w-6 h-6 bg-[#0079c2] rounded-full border-4 border-white"></div>
